--- a/trunk/ClassMIS/.classpath
+++ b/trunk/ClassMIS/.classpath
@@ -1,27 +1,27 @@
-<?xml version="1.0" encoding="UTF-8"?>
+﻿<?xml version="1.0" encoding="UTF-8"?>
 <classpath>
 	<classpathentry kind="src" path="src"/>
-	<classpathentry kind="lib" path="D:/System/Workspaces/MyEclipse8/ClassMIS/WebRoot/WEB-INF/lib/antlr-2.7.6.jar"/>
-	<classpathentry kind="lib" path="D:/System/Workspaces/MyEclipse8/ClassMIS/WebRoot/WEB-INF/lib/commons-collections-3.1.jar"/>
-	<classpathentry kind="lib" path="D:/System/Workspaces/MyEclipse8/ClassMIS/WebRoot/WEB-INF/lib/commons-dbcp.jar"/>
-	<classpathentry kind="lib" path="D:/System/Workspaces/MyEclipse8/ClassMIS/WebRoot/WEB-INF/lib/commons-fileupload-1.2.1.jar"/>
-	<classpathentry kind="lib" path="D:/System/Workspaces/MyEclipse8/ClassMIS/WebRoot/WEB-INF/lib/commons-logging-1.0.4.jar"/>
-	<classpathentry kind="lib" path="D:/System/Workspaces/MyEclipse8/ClassMIS/WebRoot/WEB-INF/lib/commons-pool.jar"/>
-	<classpathentry kind="lib" path="D:/System/Workspaces/MyEclipse8/ClassMIS/WebRoot/WEB-INF/lib/dom4j-1.6.1.jar"/>
-	<classpathentry kind="lib" path="D:/System/Workspaces/MyEclipse8/ClassMIS/WebRoot/WEB-INF/lib/freemarker-2.3.13.jar"/>
-	<classpathentry kind="lib" path="D:/System/Workspaces/MyEclipse8/ClassMIS/WebRoot/WEB-INF/lib/hibernate-3.3.2.jar"/>
-	<classpathentry kind="lib" path="D:/System/Workspaces/MyEclipse8/ClassMIS/WebRoot/WEB-INF/lib/javassist-3.9.0.GA.jar"/>
-	<classpathentry kind="lib" path="D:/System/Workspaces/MyEclipse8/ClassMIS/WebRoot/WEB-INF/lib/jta-1.1.jar"/>
-	<classpathentry kind="lib" path="D:/System/Workspaces/MyEclipse8/ClassMIS/WebRoot/WEB-INF/lib/junit-4.4.jar"/>
-	<classpathentry kind="lib" path="D:/System/Workspaces/MyEclipse8/ClassMIS/WebRoot/WEB-INF/lib/log4j-1.2.15.jar"/>
-	<classpathentry kind="lib" path="D:/System/Workspaces/MyEclipse8/ClassMIS/WebRoot/WEB-INF/lib/mysql-connector-java-5.1.7-bin.jar"/>
-	<classpathentry kind="lib" path="D:/System/Workspaces/MyEclipse8/ClassMIS/WebRoot/WEB-INF/lib/ognl-2.6.11.jar"/>
-	<classpathentry kind="lib" path="D:/System/Workspaces/MyEclipse8/ClassMIS/WebRoot/WEB-INF/lib/slf4j-api-1.5.8.jar"/>
-	<classpathentry kind="lib" path="D:/System/Workspaces/MyEclipse8/ClassMIS/WebRoot/WEB-INF/lib/slf4j-nop-1.5.8.jar"/>
-	<classpathentry kind="lib" path="D:/System/Workspaces/MyEclipse8/ClassMIS/WebRoot/WEB-INF/lib/spring-2.5.6.jar"/>
-	<classpathentry kind="lib" path="D:/System/Workspaces/MyEclipse8/ClassMIS/WebRoot/WEB-INF/lib/struts2-core-2.1.6.jar"/>
-	<classpathentry kind="lib" path="D:/System/Workspaces/MyEclipse8/ClassMIS/WebRoot/WEB-INF/lib/struts2-spring-plugin-2.1.6.jar"/>
-	<classpathentry kind="lib" path="D:/System/Workspaces/MyEclipse8/ClassMIS/WebRoot/WEB-INF/lib/xwork-2.1.2.jar"/>
+	<classpathentry kind="lib" path="WebRoot/WEB-INF/lib/antlr-2.7.6.jar"/>
+	<classpathentry kind="lib" path="WebRoot/WEB-INF/lib/commons-collections-3.1.jar"/>
+	<classpathentry kind="lib" path="WebRoot/WEB-INF/lib/commons-dbcp.jar"/>
+	<classpathentry kind="lib" path="WebRoot/WEB-INF/lib/commons-fileupload-1.2.1.jar"/>
+	<classpathentry kind="lib" path="WebRoot/WEB-INF/lib/commons-logging-1.0.4.jar"/>
+	<classpathentry kind="lib" path="WebRoot/WEB-INF/lib/commons-pool.jar"/>
+	<classpathentry kind="lib" path="WebRoot/WEB-INF/lib/dom4j-1.6.1.jar"/>
+	<classpathentry kind="lib" path="WebRoot/WEB-INF/lib/freemarker-2.3.13.jar"/>
+	<classpathentry kind="lib" path="WebRoot/WEB-INF/lib/hibernate-3.3.2.jar"/>
+	<classpathentry kind="lib" path="WebRoot/WEB-INF/lib/javassist-3.9.0.GA.jar"/>
+	<classpathentry kind="lib" path="WebRoot/WEB-INF/lib/jta-1.1.jar"/>
+	<classpathentry kind="lib" path="WebRoot/WEB-INF/lib/junit-4.4.jar"/>
+	<classpathentry kind="lib" path="WebRoot/WEB-INF/lib/log4j-1.2.15.jar"/>
+	<classpathentry kind="lib" path="WebRoot/WEB-INF/lib/mysql-connector-java-5.1.7-bin.jar"/>
+	<classpathentry kind="lib" path="WebRoot/WEB-INF/lib/ognl-2.6.11.jar"/>
+	<classpathentry kind="lib" path="WebRoot/WEB-INF/lib/slf4j-api-1.5.8.jar"/>
+	<classpathentry kind="lib" path="WebRoot/WEB-INF/lib/slf4j-nop-1.5.8.jar"/>
+	<classpathentry kind="lib" path="WebRoot/WEB-INF/lib/spring-2.5.6.jar"/>
+	<classpathentry kind="lib" path="WebRoot/WEB-INF/lib/struts2-core-2.1.6.jar"/>
+	<classpathentry kind="lib" path="WebRoot/WEB-INF/lib/struts2-spring-plugin-2.1.6.jar"/>
+	<classpathentry kind="lib" path="WebRoot/WEB-INF/lib/xwork-2.1.2.jar"/>
 	<classpathentry kind="con" path="org.eclipse.jdt.launching.JRE_CONTAINER"/>
 	<classpathentry kind="con" path="melibrary.com.genuitec.eclipse.j2eedt.core.MYECLIPSE_JAVAEE_5_CONTAINER"/>
 	<classpathentry kind="lib" path="WebRoot/WEB-INF/lib/poi-3.2-FINAL-20081019.jar"/>
