--- a/ClassMS/.settings/org.eclipse.core.resources.prefs
+++ b/ClassMS/.settings/org.eclipse.core.resources.prefs
@@ -1,3 +1,4 @@
-#Wed Oct 28 14:10:54 CST 2009
+#Fri Oct 30 19:15:40 CST 2009
 eclipse.preferences.version=1
 encoding/<project>=UTF-8
+encoding/WebRoot=UTF-8
