--- a/trunk/ClassMS/WebRoot/WEB-INF/web.xml
+++ b/trunk/ClassMS/WebRoot/WEB-INF/web.xml
@@ -43,7 +43,7 @@
 
 	<context-param>
 		<param-name>contextConfigLocation</param-name>
-		<param-value>classpath*:applicationContext-*.xml</param-value>
+		<param-value>classpath*:applicationContext.xml</param-value>
 	</context-param>
 
 	<mime-mapping>
