--- a/trunk/ClassMS/.settings/org.eclipse.core.resources.prefs
+++ b/trunk/ClassMS/.settings/org.eclipse.core.resources.prefs
@@ -1,4 +1,5 @@
-#Fri Oct 30 19:15:40 CST 2009
+#Sun Nov 08 21:42:50 CST 2009
 eclipse.preferences.version=1
+encoding//WebRoot/content/kissy/kissyRes.jsp=UTF-8
 encoding/<project>=UTF-8
 encoding/WebRoot=UTF-8
